--- a/package.json
+++ b/package.json
@@ -1,6 +1,23 @@
 {
+  "name": "scraping",
+  "version": "1.0.0",
+  "main": "getProductInfo.js",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "axios": "^1.6.7",
-    "cheerio": "^1.0.0-rc.12"
-  }
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
+    "express": "^4.18.2",
+    "json2csv": "^6.0.0-alpha.2",
+    "json2xls": "^0.1.2",
+    "mongoose": "^8.1.2",
+    "morgan": "^1.10.0"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
