--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,7 +13,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.3",
+    "xlsx": "^0.18.5"
   },
   "author": "",
   "license": "ISC",
