--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.14.1",
+    "antd-table-saveas-excel": "^2.2.1",
     "axios": "^1.6.7",
+    "better-xlsx": "^0.7.6",
     "datatables.net-dt": "^2.0.0",
+    "file-saver": "^2.0.5",
     "flowbite": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
